<resources>
    <string name="app_name">Multi-Note Pad</string>
    <string name="multi_note_pad">Multi-Note Pad</string>
    <string name="copyright">2020, Shantanoo Sinha</string>
    <string name="version">Version 1.0</string>
    <string name="about">About</string>
    <string name="add_note">Add Note</string>
    <string name="save_note">Save Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_text">Note Text</string>
    <string name="note_timestamp">Note Timestamp</string>
    <string name="continued_string">...</string>
    <!--<string name="title_activity_add_note">Add Note</string>-->
    <string name="notes_json_file">Notes_Data.json</string>
    <string name="utf_8">UTF-8</string>
    <string name="notes_list">Notes_List</string>
    <string name="timestamp">timestamp</string>
    <string name="text">text</string>
    <string name="title">title</string>
    <string name="existing_note">existing_note</string>
    <string name="note_position">note_position</string>
    <string name="note">note</string>
    <!--<string name="multi_notes_list">MultiNotesList</string>-->
    <string name="note_updated">note_updated</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="note_not_saved">Your note is not saved!</string>
    <string name="new_line">\n</string>
    <string name="save_this_note">Save note \'</string>
    <string name="question">\'?</string>
    <string name="new_note">NEW_NOTE</string>
    <string name="title_empty_message">Title is empty. Not saving this note!</string>
    <string name="notes_updated">notes_updated</string>
    <string name="delete_note">Delete Note \'</string>
    <!--<string name="Note">Note</string>-->
</resources>